refactor: add is_obe flag to BudgetLine and update related logic

--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -500,7 +500,7 @@
       created_by: 503,
       agreement_id: 2,
       amount: 1000000.0,
-      status: "OVERCOME_BY_EVENTS",
+      is_obe: true,
       proc_shop_fee_percentage: 0.005,
       on_hold: false,
       certified: false,
@@ -575,7 +575,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "5585724.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.031",
     "services_component_id": null,
     "on_hold": false,
@@ -590,7 +590,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "5907323.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.004",
     "services_component_id": 1,
     "on_hold": false,
@@ -653,7 +653,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "921547.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.022",
     "services_component_id": null,
     "on_hold": false,
@@ -716,7 +716,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2969349.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.010",
     "services_component_id": 2,
     "on_hold": false,
@@ -731,7 +731,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "7105510.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.015",
     "services_component_id": 4,
     "on_hold": false,
@@ -794,7 +794,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "8803142.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.023",
     "services_component_id": null,
     "on_hold": true,
@@ -809,7 +809,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "6326180.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.016",
     "services_component_id": 6,
     "on_hold": false,
@@ -840,7 +840,7 @@
     "created_by": 500,
     "agreement_id": 1,
     "amount": "3197615.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.049",
     "services_component_id": null,
     "on_hold": false,
@@ -903,7 +903,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "223209.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.020",
     "services_component_id": 4,
     "on_hold": false,
@@ -966,7 +966,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "296907.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.013",
     "services_component_id": 8,
     "on_hold": false,
@@ -981,7 +981,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "5420817.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.019",
     "services_component_id": 7,
     "on_hold": false,
@@ -996,7 +996,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "1402111.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.014",
     "services_component_id": 2,
     "on_hold": false,
@@ -1027,7 +1027,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "8255963.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.001",
     "services_component_id": 6,
     "on_hold": false,
@@ -1074,7 +1074,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "268244.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.034",
     "services_component_id": 4,
     "on_hold": true,
@@ -1089,7 +1089,7 @@
     "created_by": 500,
     "agreement_id": 1,
     "amount": "3162531.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.028",
     "services_component_id": 6,
     "on_hold": false,
@@ -1104,7 +1104,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "8576193.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.006",
     "services_component_id": 5,
     "on_hold": false,
@@ -1167,7 +1167,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2727143.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.033",
     "services_component_id": 2,
     "on_hold": false,
@@ -1182,7 +1182,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "5810090.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.009",
     "services_component_id": 3,
     "on_hold": false,
@@ -1245,7 +1245,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2292202.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.025",
     "services_component_id": 4,
     "on_hold": false,
@@ -1260,7 +1260,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2556533.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 2,
     "on_hold": false,
@@ -1275,7 +1275,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "4119655.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.043",
     "services_component_id": 1,
     "on_hold": false,
@@ -1354,7 +1354,7 @@
     "created_by": 522,
     "agreement_id": 1,
     "amount": "7790739.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.033",
     "services_component_id": 6,
     "on_hold": false,
@@ -1369,7 +1369,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "6943601.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.012",
     "services_component_id": 2,
     "on_hold": false,
@@ -1400,7 +1400,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "2551350.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 1,
     "on_hold": false,
@@ -1447,7 +1447,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "7481322.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.037",
     "services_component_id": 3,
     "on_hold": false,
@@ -1526,7 +1526,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "2722042.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.014",
     "services_component_id": 6,
     "on_hold": false,
@@ -1621,7 +1621,7 @@
     "created_by": 503,
     "agreement_id": 1,
     "amount": "6201518.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.026",
     "services_component_id": 6,
     "on_hold": false,
@@ -1812,7 +1812,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "994347.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.030",
     "services_component_id": 2,
     "on_hold": false,
@@ -1923,7 +1923,7 @@
     "created_by": 520,
     "agreement_id": 1,
     "amount": "3171638.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.040",
     "services_component_id": 3,
     "on_hold": false,
@@ -1938,7 +1938,7 @@
     "created_by": 511,
     "agreement_id": 1,
     "amount": "1142612.00",
-    "status": "OVERCOME_BY_EVENTS",
+    is_obe: true,
     "proc_shop_fee_percentage": "0.031",
     "services_component_id": 8,
     "on_hold": false,
