--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,6 @@
     "type": "module",
     "dependencies": {
         "@azure/storage-blob": "12.27.0",
-        "@eslint/compat": "1.3.0",
-        "@eslint/js": "9.29.0",
         "@fortawesome/fontawesome-svg-core": "6.7.2",
         "@fortawesome/free-regular-svg-icons": "6.7.2",
         "@fortawesome/free-solid-svg-icons": "6.7.2",
@@ -21,17 +19,6 @@
         "axios": "1.10.0",
         "clsx": "2.1.1",
         "crypto-random-string": "5.0.0",
-        "eslint": "9.29.0",
-        "eslint-config-prettier": "10.1.1",
-        "eslint-plugin-cypress": "4.3.0",
-        "eslint-plugin-import": "2.32.0",
-        "eslint-plugin-jest": "28.14.0",
-        "eslint-plugin-jsx-a11y": "6.10.2",
-        "eslint-plugin-prettier": "5.5.0",
-        "eslint-plugin-react": "7.37.3",
-        "eslint-plugin-react-hooks": "5.2.0",
-        "eslint-plugin-react-refresh": "0.4.16",
-        "eslint-plugin-testing-library": "7.5.3",
         "jose": "6.0.11",
         "js-cookie": "3.0.5",
         "jsdom": "26.1.0",
@@ -53,7 +40,7 @@
         "sass-loader": "16.0.4",
         "styled-components": "6.1.13",
         "vest": "5.4.6",
-        "vite": "6.3.4",
+        "vite": "7.0.0",
         "vite-jsconfig-paths": "2.0.1",
         "vite-plugin-babel-macros": "1.0.6",
         "vite-plugin-eslint": "1.8.1",
@@ -76,6 +63,19 @@
         "cypress": "14.5.0",
         "cypress-axe": "1.6.0",
         "cypress-localstorage-commands": "2.2.7",
+        "@eslint/compat": "1.3.0",
+        "@eslint/js": "9.29.0",
+        "eslint": "9.29.0",
+        "eslint-config-prettier": "10.1.1",
+        "eslint-plugin-cypress": "4.3.0",
+        "eslint-plugin-import": "2.32.0",
+        "eslint-plugin-jsx-a11y": "6.10.2",
+        "eslint-plugin-prettier": "5.5.0",
+        "eslint-plugin-react": "7.37.3",
+        "eslint-plugin-react-hooks": "5.2.0",
+        "eslint-plugin-react-refresh": "0.4.16",
+        "eslint-plugin-testing-library": "7.5.3",
+        "eslint-plugin-vitest": "^0.5.4",
         "globals": "16.2.0",
         "history": "5.3.0",
         "msw": "2.10.1",
