--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,11 @@
         "@nivo/pie": "0.99.0",
         "@reduxjs/toolkit": "2.8.2",
         "@uswds/uswds": "3.13.0",
-        "@vitejs/plugin-react": "4.6.0",
         "axios": "1.10.0",
         "clsx": "2.1.1",
         "crypto-random-string": "5.0.0",
         "jose": "6.0.11",
         "js-cookie": "3.0.5",
-        "jsdom": "26.1.0",
         "jwt-decode": "4.0.0",
         "lodash": "4.17.21",
         "react": "18.3.1",
@@ -37,14 +35,8 @@
         "rehype-raw": "7.0.0",
         "remark-gfm": "4.0.1",
         "sass": "1.89.0",
-        "sass-loader": "16.0.4",
         "styled-components": "6.1.13",
         "vest": "5.4.6",
-        "vite": "7.0.0",
-        "vite-jsconfig-paths": "2.0.1",
-        "vite-plugin-babel-macros": "1.0.6",
-        "vite-plugin-eslint": "1.8.1",
-        "vite-plugin-svgr": "4.3.0",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
     },
     "overrides": {
@@ -57,6 +49,7 @@
         "@types/testing-library__jest-dom": "6.0.0",
         "@types/testing-library__react": "10.2.0",
         "@uswds/compile": "1.3.1",
+        "@vitejs/plugin-react": "4.6.0",
         "@vitest/coverage-istanbul": "3.2.4",
         "@vitest/ui": "3.2.4",
         "axe-core": "4.10.2",
@@ -75,13 +68,20 @@
         "eslint-plugin-react-hooks": "5.2.0",
         "eslint-plugin-react-refresh": "0.4.16",
         "eslint-plugin-testing-library": "7.5.3",
-        "eslint-plugin-vitest": "^0.5.4",
+        "eslint-plugin-vitest": "0.5.4",
         "globals": "16.2.0",
         "history": "5.3.0",
+        "jsdom": "26.1.0",
         "msw": "2.10.1",
         "prettier": "3.6.0",
         "redux-mock-store": "1.5.5",
+        "sass-loader": "16.0.4",
         "semantic-release": "24.2.5",
+        "vite": "7.0.0",
+        "vite-jsconfig-paths": "2.0.1",
+        "vite-plugin-babel-macros": "1.0.6",
+        "vite-plugin-eslint": "1.8.1",
+        "vite-plugin-svgr": "4.3.0",
         "vitest": "3.2.4"
     },
     "scripts": {
