--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -2992,5 +2992,121 @@
             created_by: 526,
             created_on: "2025-06-26T14:43:53.928887Z",
         },
+        {
+            // 33
+            event_type: "UPDATE_AGREEMENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    name: "Interoperability Initiatives",
+                    _meta: {
+                        isEditable: true,
+                    },
+                    notes: "Add Notes",
+                    vendor: "Vendor 1",
+                    vendor_id: 101,
+                    project_id: 1002,
+                    updated_by: null,
+                    description: "Test description",
+                    display_name: "Interoperability Initiatives",
+                    team_leaders: ["Ivelisse Martinez-Beck", "Sheila Celentano"],
+                    team_members: [
+                        {
+                            id: 511,
+                            email: "Niki.Denmark@example.com",
+                            full_name: "Niki Denmark",
+                        },
+                        {
+                            id: 520,
+                            email: "system.owner@email.com",
+                            full_name: "System Owner",
+                        },
+                        {
+                            id: 287,
+                            full_name: "Amare Beza",
+                        },
+                    ],
+                    contract_type: "COST_PLUS_FIXED_FEE",
+                    agreement_type: "CONTRACT",
+                    contract_number: "XXXX000000009",
+                    agreement_reason: "RECOMPETE",
+                    delivered_status: false,
+                    support_contacts: [],
+                    awarding_entity_id: 2,
+                    division_directors: ["Dave Director", "Director Derrek"],
+                    project_officer_id: 503,
+                    procurement_tracker_id: null,
+                    product_service_code_id: 2,
+                    service_requirement_type: "SEVERABLE",
+                    alternate_project_officer_id: 518,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "Not Relevant",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "914",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                agreement_updates: {
+                    changes: {
+                        notes: {
+                            new_value: "Add Notes",
+                            old_value: "",
+                        },
+                        vendor: {
+                            new_value: 100,
+                            old_value: 102,
+                        },
+                        vendor_id: {
+                            new_value: 100,
+                            old_value: 102,
+                        },
+                        updated_on: {
+                            new_value: "2025-07-02T14:53:57.527712Z",
+                            old_value: "2025-07-02T14:51:00.332280Z",
+                        },
+                        contract_type: {
+                            new_value: "COST_PLUS_FIXED_FEE",
+                            old_value: "LABOR_HOUR",
+                        },
+                        agreement_reason: {
+                            new_value: "RECOMPETE",
+                            old_value: "NEW_REQ",
+                        },
+                        product_service_code: {
+                            new_value: 2,
+                            old_value: 1,
+                        },
+                        product_service_code_id: {
+                            new_value: 2,
+                            old_value: 1,
+                        },
+                        service_requirement_type: {
+                            new_value: "SEVERABLE",
+                            old_value: "NON_SEVERABLE",
+                        },
+                    },
+                    owner_id: 9,
+                    updated_by: 520,
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
     ],
 }
