--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -41,12 +41,11 @@
     },
     "packageRules": [
         {
-            "matchPackageNames": ["python", "marshmallow"],
+            "matchPackageNames": ["python"],
             "enabled": false
         },
         {
             "matchPackageNames": [
-                "marshmallow",
                 "python"
             ],
             "enabled": false,
