--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,7 +60,7 @@
         "@eslint/js": "9.30.1",
         "eslint": "9.30.1",
         "eslint-config-prettier": "10.1.1",
-        "eslint-plugin-cypress": "4.3.0",
+        "eslint-plugin-cypress": "5.1.0",
         "eslint-plugin-import": "2.32.0",
         "eslint-plugin-jsx-a11y": "6.10.2",
         "eslint-plugin-prettier": "5.5.0",
@@ -95,7 +95,9 @@
         "test:e2e:interactive": "cypress open --config-file ./cypress.config.js",
         "test:e2e": "cypress run --config-file ./cypress.config.js --headless",
         "test:e2e:debug": "DEBUG=cypress:* cypress run --config-file ./cypress.config.js --headless",
-        "lint": "eslint './src/**'",
+        "lint": "eslint './src/**' './cypress/**'",
+        "lint:src": "eslint './src/**'",
+        "lint:cypress": "eslint './cypress/**'",
         "cypress:open": "cypress open",
         "uswds:update": "bunx gulp compile"
     },
