--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -16842,6 +16842,97 @@
             on_hold: false,
             certified: false,
             closed: false,
-        }
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 502,
+            created_by: 503,
+            agreement_id: 2,
+            amount: 7000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 506,
+            created_by: 503,
+            agreement_id: 2,
+            amount: 2000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 505,
+            created_by: 503,
+            agreement_id: 2,
+            amount: 195000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 508,
+            created_by: 503,
+            agreement_id: 2,
+            amount: 1000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 500,
+            created_by: 503,
+            agreement_id: 1,
+            amount: 2000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 500,
+            created_by: 503,
+            agreement_id: 1,
+            amount: 3000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            "budget_line_item_type": "DIRECT_OBLIGATION",
+            line_description: "Line Item 2",
+            comments: "",
+            can_id: 500,
+            created_by: 503,
+            agreement_id: 1,
+            amount: 4000000.0,
+            is_obe: true,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
     ],
 }
