chore: wrote tests and event generation code for team member changes

--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -3108,5 +3108,92 @@
             created_by: 526,
             created_on: "2025-06-26T14:43:53.928887Z",
         },
+        {
+            // 34 add and remove team members
+            event_type: "UPDATE_AGREEMENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    name: "Interoperability Initiatives",
+                    _meta: {
+                        isEditable: true,
+                    },
+                    notes: "",
+                    vendor: "Vendor 3",
+                    vendor_id: 102,
+                    project_id: 1002,
+                    updated_by: null,
+                    description: "Test description",
+                    display_name: "Interoperability Initiatives",
+                    team_leaders: ["Ivelisse Martinez-Beck", "Sheila Celentano"],
+                    team_members: [
+                        {
+                            id: 520,
+                            email: "system.owner@email.com",
+                            full_name: "System Owner",
+                        },
+                        {
+                            id: 287,
+                            full_name: "Amare Beza",
+                        },
+                        {
+                            id: 522,
+                            full_name: "Dave Director",
+                        },
+                    ],
+                    contract_type: "FIRM_FIXED_PRICE",
+                    agreement_type: "CONTRACT",
+                    contract_number: "XXXX000000009",
+                    agreement_reason: "NEW_REQ",
+                    delivered_status: false,
+                    support_contacts: [],
+                    awarding_entity_id: 2,
+                    division_directors: ["Dave Director", "Director Derrek"],
+                    project_officer_id: 503,
+                    procurement_tracker_id: null,
+                    product_service_code_id: 1,
+                    service_requirement_type: "NON_SEVERABLE",
+                    alternate_project_officer_id: null,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "test",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "868",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                agreement_updates: {
+                    changes: {
+                        updated_on: {
+                            new_value: "2025-07-09T13:53:14.626321Z",
+                            old_value: "2025-07-09T13:51:41.496326Z",
+                        },
+                    },
+                    owner_id: 9,
+                    updated_by: 520,
+                    team_member_changes: {
+                        user_ids_added: [522, 287],
+                        user_ids_removed: [511],
+                    },
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
     ],
 }
