--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -65,7 +65,7 @@ jobs:
       - name: E2E Test
         working-directory: frontend
         run: |
-          bun run cypress install && bun run test:e2e --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
+          bun run cypress install && bun run test:e2e:ci --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
 
       # Upload Cypress screenshots as artifact if a test fails
       - name: Upload screenshots if failure
