--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,3 +53,7 @@ repos:
         stages: [commit-msg]
         additional_dependencies: ["@commitlint/config-conventional"]
         language_version: 22.8.0
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 41.23.5
+    hooks:
+      - id: renovate-config-validator
