ci(deps): telling renovate to try and update pre-commit

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -39,6 +39,9 @@
         "automerge": true,
         "platformAutomerge": true
     },
+    "pre-commit": {
+        "enabled": true
+    },
     "packageRules": [
         {
             "matchPackageNames": ["python"],
