--- a/frontend/Dockerfile.azure
+++ b/frontend/Dockerfile.azure
@@ -1,24 +1,34 @@
-# ---- Build Stage ----
-# alpine
-FROM oven/bun@sha256:2cdd9c93006af1b433c214016d72a3c60d7aa2c75691cb44dfd5250aa379986b as build
+# ---- Dependency Installation Stage ----
+FROM oven/bun@sha256:2cdd9c93006af1b433c214016d72a3c60d7aa2c75691cb44dfd5250aa379986b as deps
 # hadolint ignore=DL3008
 RUN apt-get update && apt-get -y install unzip --no-install-recommends && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /home/bun/app
 
 # Copy only the package files first to leverage Docker cache
+# This layer will only rebuild when package.json or bun.lockb changes
 COPY package.json bun.lockb ./
 
 # Install all dependencies (including dev dependencies needed for build)
-RUN bun install --frozen-lockfile
+# Use cache mount to persist node_modules across builds
+RUN --mount=type=cache,target=/root/.bun/install/cache \
+    bun install --frozen-lockfile
 
-# Copy the rest of the application files
-COPY index.html .
-COPY src src
+# ---- Build Stage ----
+FROM deps as build
+
+# Copy configuration files that rarely change
+COPY vite.config.mjs eslint.config.js ./
+
+# Copy environment files
 COPY vite-env vite-env
+
+# Copy build-time files
+COPY index.html ./
+
+# Copy source code (this will invalidate cache when code changes, but not deps)
+COPY src src
 COPY public public
-COPY vite.config.mjs .
-COPY eslint.config.js .
 
 # Build the application
 ARG MODE
